fix counter not showing during autoplay

--- a/css/index-combined-navigation-autoplay-pause-btn-contstant.css
+++ b/css/index-combined-navigation-autoplay-pause-btn-contstant.css
@@ -398,6 +398,9 @@ body {
 }
 
 .number-of-items-btn {
+  position: fixed;
+  bottom: 16px;
+  right: 9px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -405,8 +408,6 @@ body {
   height: 28px;
   background-color: rgba(0, 0, 0, 0.3);
   border-radius: 14px;
-  position: absolute;
-  right: 9px;
   border: none;
   z-index: 300;
 }
